src/styles.css
body {
  background-image: url("https://wallpaperfm.com/img/original/8/5/7/9236.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

#home {
  text-align: center;
  background: rgba(0, 0, 9, 0.8);
  border-radius: 4px;
  color: #00ECFF;
  text-shadow: 1px 2px 2px #00A6FF, 0 0 5px #2256F4;
  font-family: 'Orbitron', sans-serif;
}

#gameSelector {
  text-align: center;
  background: rgba(0, 0, 9, 0.8);
  border-radius: 4px;
  color: #00ECFF;
  font-family: 'Orbitron', sans-serif;
}

#title {
text-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
}
#title2 {
text-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
}

#envoy {
  text-align: center;
  background: rgba(0, 0, 9, 0.8);
  border-radius: 4px;
  color: #00ECFF;
  font-family: 'Orbitron', sans-serif;
  border-color: transparent;
}

#gameUi {
  background-color:transparent;
  border-radius: 4px;
  font-family: 'Orbitron', sans-serif;
  border-color: transparent;
}

#gameWindow, #actionBar, a {
background-color:transparent;
color: #00ECFF;
font-family: 'Orbitron', sans-serif;
border-color: transparent;
}

#actionBar {
  padding-right: 25px;
}

#shipType, #statCard, a {
  background: black;
  color: #00ECFF;
  font-family: 'Orbitron', sans-serif;
  border-color: transparent;
}

#colonize {
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  border-radius: 4px;
  color: #2256F4;
  font-family: 'Orbitron', sans-serif;
}

#resultScreen {
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  border-radius: 4px;
  color: #0166FE;
  font-family: 'Orbitron', sans-serif;
}

.btn:hover {
  background-color: #008CBA;
}

.btn:active {
  background-color: #008CBA;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

#start {
  border-color: transparent;
  border: none;
  color: black;
  padding: 16px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
  box-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
  text-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
}


#start {
  background-color: transparent;
  color: #00ECFF;
  border: 2px solid #00ECFF, 0 0 5px #2256F4;
  border-radius: 12px;
}

#start:hover {
  background-color: #00ECFF;
  color: black;
}

#game1, #game2, a {
  background-color: transparent;
  border: none;
  color: black;
  padding: 16px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
  box-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
  text-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
}

#game1, #game2, a {
  background-color: transparent;
  color: #00ECFF;
  border: 2px solid #00ECFF, 0 0 5px #2256F4;
  border-radius: 12px;
}
#game1:hover, #game2:hover, a {
  background-color: #00ECFF;
  color: black;
}

#crew1, #crew2, #crew3, #crew4, #crew5,
#crew6, #crew7, #crew8, #crew9, #crew10,
a {
  background-color: transparent;
  color: #00ECFF;
  border: 2px solid #00ECFF, 0 0 5px #2256F4;
  border-radius: 12px;
  border-color: transparent;
}

#goBack1, #goBack2, #speedIncrease, #speedDecrease, #speedIncrease2, #speedDecrease2, a {
  background-color: transparent;
  border: none;
  color: black;
  padding: 16px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
  box-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
  text-shadow: 0 0 5px #00ECFF, 0 0 5px #2256F4;
}

#goBack1, #goBack2, #speedIncrease, #speedDecrease, #speedIncrease2, #speedDecrease2, a {
  background-color: transparent;
  color: #00ECFF;
  border: 2px solid #00ECFF, 0 0 5px #2256F4;
  border-radius: 12px;
}
#goBack1:hover, #goBack2:hover, #speedIncrease:hover, #speedDecrease:hover, #speedIncrease2:hover, #speedDecrease2:hover, a {
  background-color: #00ECFF;
  color: black;
}

.footer {
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  border-radius: 4px;
  color: #00ECFF;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
}
  progress#health {
  	display:inline-block;
  	width:150px;
  	height:20px;
  	margin:0;
  	background:none;
  	border: 0;
  	border-radius: 2px;
  	text-align: center;
  	position:relative;
  	font-family: Arial, Helvetica, sans-serif;
  	font-size: 0.8em;
  }
  progress#health::-webkit-progress-bar {
  	height:11px;
  	width:150px;
  	margin:0 auto;
  	background-color: transparent;
  	border-radius: 15px;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#health::-webkit-progress-value {
  	display:inline-block;
  	float:left;
  	height:8px;
  	margin:0px -10px 0 0;
  	background: #de0000;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#health:after {
  	margin:-26px 0 0 -7px;
  	padding:0;
  	display:inline-block;
  	float:left;
  	/* content: attr(value) '%'; */
  }
  progress#hunger {
  	display:inline-block;
  	width:150px;
  	height:20px;
  	margin:0;
  	background:none;
  	border: 0;
  	border-radius: 2px;
  	text-align: center;
  	position:relative;
  	font-family: Arial, Helvetica, sans-serif;
  	font-size: 0.8em;
  }
  progress#hunger::-webkit-progress-bar {
  	height:11px;
  	width:150px;
  	margin:0 auto;
  	background-color: transparent;
  	border-radius: 15px;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#hunger::-webkit-progress-value {
  	display:inline-block;
  	float:left;
  	height:8px;
  	margin:0px -10px 0 0;
  	background: #ffe100;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#hunger:after {
  	margin:-26px 0 0 -7px;
  	padding:0;
  	display:inline-block;
  	float:left;
  	/* content: attr(value) '%'; */
  }
  progress#fuel {
  	display:inline-block;
  	width:150px;
  	height:20px;
  	margin:0;
  	background:none;
  	border: 0;
  	border-radius: 2px;
  	text-align: center;
  	position:relative;
  	font-family: Arial, Helvetica, sans-serif;
  	font-size: 0.8em;
  }
  progress#fuel::-webkit-progress-bar {
  	height:11px;
  	width:150px;
  	margin:0 auto;
  	background-color: transparent;
  	border-radius: 15px;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#fuel::-webkit-progress-value {
  	display:inline-block;
  	float:left;
  	height:8px;
  	margin:0px -10px 0 0;
  	background: #00f2ff;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#fuel:after {
  	margin:-26px 0 0 -7px;
  	padding:0;
  	display:inline-block;
  	float:left;
  	/* content: attr(value) '%'; */
  }
  progress#food {
    display:inline-block;
    width:150px;
    height:20px;
    margin:0;
    background:none;
    border: 0;
    border-radius: 2px;
    text-align: center;
    position:relative;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.8em;
  }
  progress#food::-webkit-progress-bar {
    height:11px;
    width:150px;
    margin:0 auto;
    background-color: transparent;
    border-radius: 15px;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#food::-webkit-progress-value {
    display:inline-block;
    float:left;
    height:8px;
    margin:0px -10px 0 0;
    background: #00ff1e;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#food:after {
    margin:-26px 0 0 -7px;
    padding:0;
    display:inline-block;
    float:left;
    /* content: attr(value) '%'; */
  }

  progress#shield {
  	display:inline-block;
  	width:150px;
  	height:20px;
  	margin:0;
  	background:none;
  	border: 0;
  	border-radius: 2px;
  	text-align: center;
  	position:relative;
  	font-family: Arial, Helvetica, sans-serif;
  	font-size: 0.8em;
  }
  progress#shield::-webkit-progress-bar {
  	height:11px;
  	width:150px;
  	margin:0 auto;
  	background-color: transparent;
  	border-radius: 15px;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#shield::-webkit-progress-value {
  	display:inline-block;
  	float:left;
  	height:8px;
  	margin:0px -10px 0 0;
  	background: #d400ff;
  	box-shadow:0px 0px 6px #777 inset;
  }
  progress#shield:after {
  	margin:-26px 0 0 -7px;
  	padding:0;
  	display:inline-block;
  	float:left;
  	/* content: attr(value) '%'; */
  }
  progress#shipHp {
    display:inline-block;
    width:150px;
    height:20px;
    margin:0;
    background:none;
    border: 0;
    border-radius: 2px;
    text-align: center;
    position:relative;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.8em;
  }
  progress#shipHp::-webkit-progress-bar {
    height:11px;
    width:150px;
    margin:0 auto;
    background-color: transparent;
    border-radius: 15px;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#shipHp::-webkit-progress-value {
    display:inline-block;
    float:left;
    height:8px;
    margin:0px -10px 0 0;
    background: #de0000;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#shipHp:after {
    margin:-26px 0 0 -7px;
    padding:0;
    display:inline-block;
    float:left;
    /* content: attr(value) '%'; */
  }
  progress#distanceTraveled {
    display:inline-block;
    width:150px;
    height:20px;
    margin:0;
    background:none;
    border: 0;
    border-radius: 2px;
    text-align: center;
    position:relative;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.8em;
  }
  progress#distanceTraveled::-webkit-progress-bar {
    height:11px;
    width:150px;
    margin:0 auto;
    background-color: transparent;
    border-radius: 15px;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#distanceTraveled::-webkit-progress-value {
    display:inline-block;
    float:left;
    height:8px;
    margin:0px -10px 0 0;
    background: #ffffff;
    box-shadow:0px 0px 6px #777 inset;
  }
  progress#distanceTraveled:after {
    margin:-26px 0 0 -7px;
    padding:0;
    display:inline-block;
    float:left;
    content: attr(value) '%';
  }
  .shopKeeper {
    height: 300px;
    width: 300px;
  }
  .shopItemImages {
    height: 50px;
    width: 50px;
  }
  /* #shipHp{
    float: left;
  }
  #shipFuel{
    float: left;
  }
  #Money{
    float: left;
  }
  #shipParts{
    float: left;
  }
  #shipOre{
    float: left;
  }
  #shipWeapons{
    float: left;
  } */

